scripts/nullness/wpi/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8.txt
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:26: error: (accessing.nullable) $$ 1 $$ regs $$ ( 857, 861 ) $$ accessing a possibly-null array regs
		IDEX.setWriteReadData1(regs[IDEX.getWriteRegS()]);
		                       ^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:93: error: (accessing.nullable) $$ 1 $$ mainMemory $$ ( 3317, 3327 ) $$ accessing a possibly-null array mainMemory
			MEMWB.setWriteData(mainMemory[(MEMWB.getWriteALUresult() & 0xFF)]);
			                   ^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:98: error: (accessing.nullable) $$ 1 $$ mainMemory $$ ( 3512, 3522 ) $$ accessing a possibly-null array mainMemory
			mainMemory[MEMWB.getWriteALUresult()] = regs[MEMWB.getWriteRegT()];
			^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:98: error: (accessing.nullable) $$ 1 $$ regs $$ ( 3552, 3556 ) $$ accessing a possibly-null array regs
			mainMemory[MEMWB.getWriteALUresult()] = regs[MEMWB.getWriteRegT()];
			                                        ^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:111: error: (accessing.nullable) $$ 1 $$ regs $$ ( 4004, 4008 ) $$ accessing a possibly-null array regs
				regs[MEMWB.getReadWriteRegister()] = MEMWB.getReadALUresult();
				^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:115: error: (accessing.nullable) $$ 1 $$ regs $$ ( 4308, 4312 ) $$ accessing a possibly-null array regs
				regs[MEMWB.getReadWriteRegister()] = MEMWB.getReadData();
				^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:355: error: (accessing.nullable) $$ 1 $$ mainMemory $$ ( 13510, 13520 ) $$ accessing a possibly-null array mainMemory
			System.out.println("Main Memory #" + MEMWB.getWriteALUresult() + " now has value [" + mainMemory[MEMWB.getWriteALUresult()] + "]");
			                                                                                      ^
../original/url41e0dd6de9_jakaldama_pipeline_simulator_tgz-pJ8-PipelineSimulatorJ8/src/PipelineSimulator.java:387: error: (dereference.of.nullable) $$ 1 $$ regs $$ ( 14689, 14693 ) $$ dereference of possibly-null reference regs
		for (int i = 0; i < regs.length; i++) {
		                    ^
8 errors
